Updated requirements for django project

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,11 +2,15 @@ asgiref==3.8.1
 cffi==1.17.1
 cryptography==45.0.5
 Django==5.2.2
+django-appconf==1.1.0
 django-filter==25.1
+django-imagekit==5.0.0
 djangorestframework==3.16.0
 djangorestframework_simplejwt==5.5.0
 jwt==1.4.0
 Markdown==3.8.2
+pilkit==3.0
+pillow==11.3.0
 psycopg2==2.9.10
 pycparser==2.22
 PyJWT==2.9.0
